[workspace]
members = [
  "crates/core",
  "crates/cosmwasm",
  "crates/neutron",
  "crates/test-utils",
  "contracts/hub",
  "contracts/mint",
  "contracts/vault/*",
  "contracts/testing/*",
]
resolver = "2"

[workspace.dependencies]
anyhow            = "1.0.81"
thiserror         = "1.0.58"
uint              = { version = "0.9.5", default-features = false }
cosmwasm-std      = "1.5.0"
cosmwasm-schema   = "1.5.0"
derive_more       = "0.99.17"
neutron-sdk       = "0.8.0"
static_assertions = "1.1.0"
serde             = "1.0.197"

amulet-core       = { path = "crates/core" }
amulet-cw         = { path = "crates/cosmwasm" }
amulet-ntrn       = { path = "crates/neutron" }

#dev-deps
expect-test       = "1.4.1"
ron               = "0.8.1"
rstest            = { version = "0.18.2", default-features = false }
test-utils        = { path = "crates/test-utils" }

[profile.release]
codegen-units     = 1
debug             = false
debug-assertions  = false
incremental       = false
lto               = true
overflow-checks   = true
opt-level         = 's'
panic             = "abort"
rpath             = false
