[workspace]
members = [
  "contracts/hub",
  "contracts/mint",
  "contracts/testing/*",
  "contracts/vault/*",
  "crates/core",
  "crates/cosmwasm",
  "crates/neutron",
  "crates/num",
  "crates/test-utils",
  "crates/pos-reconcile-fsm",
]
resolver = "2"

[workspace.dependencies]
# external
anyhow            = "1.0.81"
bech32            = "0.11.0"
cosmos-sdk-proto  = { version = "0.20.0", default-features = false }
cosmwasm-schema   = "1.5.0"
cosmwasm-std      = "1.5.0"
cw-utils          = "1.0.3"
derive_more       = "0.99.17"
hex               = "0.4.3"
hmac-sha256       = "1.1.7"
neutron-sdk       = "0.9.0"
prost             = "0.12.4"
prost-types       = "0.12.4"
serde             = "1.0.197"
static_assertions = "1.1.0"
thiserror         = "1.0.58"
uint              = { version = "0.9.5", default-features = false }

# internal
num               = { path = "crates/num" }
pos-reconcile-fsm = { path = "crates/pos-reconcile-fsm" }

amulet-core       = { path = "crates/core" }
amulet-cw         = { path = "crates/cosmwasm" }
amulet-ntrn       = { path = "crates/neutron" }

# dev-deps
expect-test       = "1.4.1"
ron               = { version = "0.8.1", features = [ "integer128" ] }
rstest            = { version = "0.18.2", default-features = false }
test-utils        = { path = "crates/test-utils" }

[profile.release]
codegen-units     = 1
debug             = false
debug-assertions  = false
incremental       = false
lto               = true
overflow-checks   = true
opt-level         = 's'
panic             = "abort"
rpath             = false
