[package]
name       = "amulet-hub"
version    = "1.0.0"
edition    = "2021"

[[bin]]
name       = "schema"
path       = "schema.rs"
doctest    = false
test       = false

[lib]
path       = "contract.rs"
crate-type = ["cdylib", "rlib"]
doctest    = false

[dependencies]
anyhow.workspace          = true
cosmwasm-std.workspace    = true
cosmwasm-schema.workspace = true

amulet-core.workspace     = true
amulet-cw.workspace       = true

[dev-dependencies]
test-utils = { workspace = true }
prost      = { workspace = true }
