[package]
name    = "amulet-core"
version = "0.1.0"
edition = "2021"

[lib]
path    = "lib.rs"
doctest = false

[dependencies]
serde                       = { workspace = true, features = [ "derive" ] }
derive_more.workspace       = true
static_assertions.workspace = true
thiserror.workspace         = true
uint.workspace              = true

[dev-dependencies]
test-utils.workspace        = true
