[package]
name    = "amulet-cw"
version = "0.1.0"
edition = "2021"

[lib]
path    = "lib.rs"
doctest = false

[dependencies]
thiserror.workspace       = true
cosmwasm-std              = { workspace = true, features = [ "cosmwasm_1_1" ] }
cosmwasm-schema.workspace = true
cw-utils.workspace        = true

amulet-core.workspace     = true
