[package]
name    = "amulet-cw"
version = "0.1.0"
edition = "2021"

[lib]
path    = "lib.rs"
doctest = false

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std              = { workspace = true, features = [ "cosmwasm_1_1" ] }
cw-utils.workspace        = true
strum.workspace           = true
thiserror.workspace       = true

amulet-core.workspace     = true
num.workspace             = true
