[package]
name    = "pos-reconcile-fsm"
version = "0.1.0"
edition = "2021"

[lib]
path    = "lib.rs"
doctest = false

[dependencies]
derive_more = { workspace = true }
num         = { workspace = true }

[dev-dependencies]
serde      = { workspace = true, features = [ "derive" ] }
test-utils = { workspace = true }
