[package]
name       = "drop-redemption-rate-oracle-proxy"
version    = "1.0.0"
edition    = "2021"

[lib]
path       = "contract.rs"
crate-type = ["cdylib", "rlib"]
doctest    = false
test       = true

[dependencies]
anyhow.workspace          = true
cosmwasm-std.workspace    = true
cosmwasm-schema.workspace = true

amulet-cw.workspace       = true
