[package]
name       = "amulet-remote-pos"
version    = "0.1.0"
edition    = "2021"

[[bin]]
name       = "schema"
path       = "schema.rs"
doctest    = false
test       = false

[lib]
path       = "contract.rs"
crate-type = ["cdylib", "rlib"]
doctest    = false
test       = false

[dependencies]
anyhow.workspace            = true
bech32.workspace            = true
cosmos-sdk-proto.workspace  = true
cosmwasm-schema.workspace   = true
cosmwasm-std.workspace      = true
cw-utils.workspace          = true
hex.workspace               = true
hmac-sha256.workspace       = true
neutron-sdk.workspace       = true
prost.workspace             = true
prost-types.workspace       = true

amulet-core.workspace       = true
amulet-cw.workspace         = true
amulet-ntrn.workspace       = true
num.workspace               = true
pos-reconcile-fsm.workspace = true
